<resources>
    <string name="app_name">video17</string>
    <string name="txt_valor1_string">Ingresa el primer valor</string>
    <string name="txt_valor2_string">Ingresa el segundo valor</string>
    <string name="boton_string">calcular</string>
    <string name="txt_resultado_string">Resultado</string>
    <string name="check_suma">Sumar</string>
    <string name="check_resta">Restar</string>
</resources>
